// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage disabled form states renders CTA and browser settings warning when cookies are disabled, document is embedded inside iframe, and cross-origin cookies are allowed 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "36em",
      "textAlign": "center",
    }
  }
>
  <EuiText
    color="subdued"
  >
    <p>
      <MemoizedFormattedMessage
        defaultMessage="To view this content, open it in a new window or adjust your browser settings to allow third-party cookies."
        id="xpack.security.loginPage.openInNewWindowOrChangeBrowserSettingsTitle"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiButton
    fill={true}
    href="http://some-host/bar"
    iconSide="right"
    iconType="popout"
    target="_blank"
  >
    <MemoizedFormattedMessage
      defaultMessage="Open in new window"
      id="xpack.security.loginPage.openInNewWindowButton"
    />
  </EuiButton>
</div>
`;

exports[`LoginPage disabled form states renders CTA and cross-origin cookie warning when cookies are disabled, document is embedded inside iframe, and cross-origin cookies are blocked 1`] = `
<div
  style={
    Object {
      "margin": "auto",
      "maxWidth": "36em",
      "textAlign": "center",
    }
  }
>
  <EuiText
    color="subdued"
  >
    <p>
      <MemoizedFormattedMessage
        defaultMessage="To view this content, open it in a new window or ask your administrator to allow cross-origin cookies."
        id="xpack.security.loginPage.openInNewWindowOrChangeKibanaConfigTitle"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiButton
    fill={true}
    href="http://some-host/bar"
    iconSide="right"
    iconType="popout"
    target="_blank"
  >
    <MemoizedFormattedMessage
      defaultMessage="Open in new window"
      id="xpack.security.loginPage.openInNewWindowButton"
    />
  </EuiButton>
</div>
`;

exports[`LoginPage disabled form states renders as expected when a connection to ES is not available 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="See the Kibana logs for details and try reloading the page."
      id="xpack.security.loginPage.esUnavailableMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Cannot connect to the Elasticsearch cluster"
      id="xpack.security.loginPage.esUnavailableTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when an unknown loginState layout is provided 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="See the Kibana logs for details and try reloading the page."
      id="xpack.security.loginPage.unknownLayoutMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Unsupported login form layout."
      id="xpack.security.loginPage.unknownLayoutTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when login is not enabled 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Contact your system administrator."
      id="xpack.security.loginPage.noLoginMethodsAvailableMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Login is disabled."
      id="xpack.security.loginPage.noLoginMethodsAvailableTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when secure connection is required but not present 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Contact your system administrator."
      id="xpack.security.loginPage.requiresSecureConnectionMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="A secure connection is required for log in"
      id="xpack.security.loginPage.requiresSecureConnectionTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders as expected when xpack is not available 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="To use the full set of free features in this distribution of Kibana, please update Elasticsearch to the default distribution."
      id="xpack.security.loginPage.xpackUnavailableMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Cannot connect to the Elasticsearch cluster currently configured for Kibana."
      id="xpack.security.loginPage.xpackUnavailableTitle"
    />
  }
/>
`;

exports[`LoginPage disabled form states renders warning when cookies are disabled and document is not embedded inside iframe 1`] = `
<DisabledLoginForm
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Enable cookies in your browser settings to continue."
      id="xpack.security.loginPage.requiresCookiesMessage"
    />
  }
  title={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Cookies are required to log in to Elastic"
      id="xpack.security.loginPage.requiresCookiesTitle"
    />
  }
/>
`;

exports[`LoginPage enabled form state renders as expected 1`] = `
<LoginForm
  http={
    Object {
      "addLoadingCountSource": [MockFunction],
      "get": [MockFunction],
    }
  }
  loginAssistanceMessage=""
  notifications={
    Object {
      "showErrorDialog": [MockFunction],
      "toasts": Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      },
    }
  }
  selector={
    Object {
      "enabled": false,
      "providers": Array [
        Object {
          "name": "basic1",
          "type": "basic",
          "usesLoginForm": true,
        },
      ],
    }
  }
/>
`;

exports[`LoginPage enabled form state renders as expected when loginAssistanceMessage is set 1`] = `
<LoginForm
  http={
    Object {
      "addLoadingCountSource": [MockFunction],
      "get": [MockFunction],
    }
  }
  loginAssistanceMessage="This is an *important* message"
  notifications={
    Object {
      "showErrorDialog": [MockFunction],
      "toasts": Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      },
    }
  }
  selector={
    Object {
      "enabled": false,
      "providers": Array [
        Object {
          "name": "basic1",
          "type": "basic",
          "usesLoginForm": true,
        },
      ],
    }
  }
/>
`;

exports[`LoginPage enabled form state renders as expected when loginHelp is set 1`] = `
<LoginForm
  http={
    Object {
      "addLoadingCountSource": [MockFunction],
      "get": [MockFunction],
    }
  }
  loginAssistanceMessage=""
  loginHelp="**some-help**"
  notifications={
    Object {
      "showErrorDialog": [MockFunction],
      "toasts": Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      },
    }
  }
  selector={
    Object {
      "enabled": false,
      "providers": Array [
        Object {
          "name": "basic1",
          "type": "basic",
          "usesLoginForm": true,
        },
      ],
    }
  }
/>
`;

exports[`LoginPage page renders as expected 1`] = `
<div>
  <div
    class="css-vvcdom-kbnFullScreenBgCss"
    data-test-subj="loginForm"
  >
    <header
      class="css-1uhsdzt-LoginPage"
    >
      <div
        class="css-das9jl-LoginPage"
      >
        <span
          class="loginWelcome__logo"
        >
          <span
            data-euiicon-type="logoElastic"
          />
        </span>
        <h1
          class="euiTitle loginWelcome__title emotion-euiTitle-m"
          data-test-subj="loginWelcomeTitle"
        >
          Welcome to Elastic
        </h1>
      </div>
    </header>
    <div
      class="css-das9jl-LoginPage"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
            data-test-subj="loginForm"
          >
            <form>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel-focused"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Username
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout emotion-euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldText emotion-euiFieldText"
                        data-test-subj="loginUsername"
                        id="generated-id"
                        name="username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Password
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
                      style="--euiFormControlLeftIconsCount: 1;"
                    >
                      <div
                        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                      >
                        <span
                          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                        >
                          <span
                            aria-hidden="true"
                            class="euiFormControlLayoutCustomIcon__icon"
                            data-euiicon-type="lock"
                          />
                        </span>
                      </div>
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                        data-test-subj="loginPassword"
                        id="generated-id"
                        name="password"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
                    >
                      <button
                        aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        title="Show password as plain text. Note: this will visually expose your password on the screen."
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="eye"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                    data-test-subj="loginSubmit"
                    type="submit"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      Log in
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoginPage page renders with custom branding 1`] = `
<div>
  <div
    class="css-vvcdom-kbnFullScreenBgCss"
    data-test-subj="loginForm"
  >
    <header
      class="css-1uhsdzt-LoginPage"
    >
      <div
        class="css-das9jl-LoginPage"
      >
        <span
          class="loginWelcome__logo"
          style="padding: 0px;"
        >
          <figure
            class="euiImageWrapper emotion-euiImageWrapper"
          >
            <img
              alt="logo"
              class="euiImage emotion-euiImage-customSize"
              src="logo"
              style="max-width: 40px; max-height: 40px;"
            />
          </figure>
        </span>
        <h1
          class="euiTitle loginWelcome__title emotion-euiTitle-m"
          data-test-subj="loginWelcomeTitle"
        >
          Welcome to Elastic
        </h1>
      </div>
    </header>
    <div
      class="css-das9jl-LoginPage"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-stretch-row"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiPanel euiPanel--transparent euiPanel--paddingMedium emotion-euiPanel-grow-m-m-transparent"
            data-test-subj="loginForm"
          >
            <form>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label euiFormLabel-isFocused emotion-euiFormLabel-focused"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Username
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout emotion-euiFormControlLayout"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
                    >
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldText emotion-euiFieldText"
                        data-test-subj="loginUsername"
                        id="generated-id"
                        name="username"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiFormRow euiFormRow--hasLabel emotion-euiFormRow"
                id="generated-id-row"
              >
                <div
                  class="euiFormRow__labelWrapper"
                >
                  <label
                    aria-invalid="false"
                    class="euiFormLabel euiFormRow__label emotion-euiFormLabel"
                    for="generated-id"
                    id="generated-id-label"
                  >
                    Password
                  </label>
                </div>
                <div
                  class="euiFormRow__fieldWrapper"
                >
                  <div
                    class="euiFormControlLayout euiFormControlLayout--group emotion-euiFormControlLayout-group"
                  >
                    <div
                      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-appendOnly"
                      style="--euiFormControlLeftIconsCount: 1;"
                    >
                      <div
                        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
                      >
                        <span
                          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
                        >
                          <span
                            aria-hidden="true"
                            class="euiFormControlLayoutCustomIcon__icon"
                            data-euiicon-type="lock"
                          />
                        </span>
                      </div>
                      <input
                        aria-required="true"
                        autocomplete="off"
                        class="euiFieldPassword emotion-euiFieldPassword-inGroup-withToggle"
                        data-test-subj="loginPassword"
                        id="generated-id"
                        name="password"
                        type="password"
                        value=""
                      />
                    </div>
                    <div
                      class="euiFormControlLayout__append emotion-euiFormControlLayout__side-append"
                    >
                      <button
                        aria-label="Show password as plain text. Note: this will visually expose your password on the screen."
                        class="euiButtonIcon emotion-euiButtonIcon-xs-empty-primary"
                        title="Show password as plain text. Note: this will visually expose your password on the screen."
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="eye"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="euiSpacer euiSpacer--l emotion-euiSpacer-l"
              />
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <button
                    class="euiButton emotion-euiButtonDisplay-m-fullWidth-defaultMinWidth-fill-primary"
                    data-test-subj="loginSubmit"
                    type="submit"
                  >
                    <span
                      class="emotion-euiButtonDisplayContent"
                    >
                      Log in
                    </span>
                  </button>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
